  * Remove versioned Build-Depends on dpkg, which is already on stable.
  * Remove Tag fields, they are better maintainer outside the package.
  * Improve tarball.sh to support cleaning upstream tarballs, and document
    its usage in README.Debian.
  * Turn failures when creating the tun device file non-fatal.
  * Add Homepage, Vcs-Browser and Vcs-Svn fields in debian/control.

 -- Guillem Jover <guillem@debian.org>  Thu, 04 Oct 2007 04:44:27 +0300

bochs (2.3+20070705-2) unstable; urgency=low

  * Fix differing prototype for tftp_send_optack in eth_vnet.cc affecting
    builds on 64 bit architectures. (Closes: #432250, #432405)
    - debian/patches/05_64_bit_cleanliness.patch: New file.
    Thanks to Aaron M. Ucko <ucko@debian.org>.

 -- Guillem Jover <guillem@debian.org>  Tue, 10 Jul 2007 05:44:13 +0300

bochs (2.3+20070705-1) unstable; urgency=low

  * New upstream snapshot.
    - Do not provoke a BSOD for Windows 2000 from bochsbios. (Closes: #417416)
    - Fix OpenBSD 3.9 installation iso booting up to the installer with
      qemu. (Closes: #382795)
    - Fix heap buffer overflow in ne2k emulated driver. (Closes: #427144)
      CVE-2007-2893
    - Support spaces in command line bochsrc-like options. (Closes: #250196)
    - debian/patches/00_base.patch: Sync.
    - debian/patches/01_man.patch: Likewise.
    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_redolog_FTBFS.patch: Likewise.
    - debian/patches/04_man_table.patch: Likewise.
  * Update Tag: field to the latest vocabulary.
  * Use binary:Version instead of deprecated Source-Version substvar.
  * Update CVSROOT in tarball.sh.
  * Explicitely point to LGPL 2.1 in debian/copyright.
  * Update menu entry section.
  * Do not ignore make errors on clean.
  * Switch configuration variables to simply expanded ones in debian/rules.
  * Update config.sub and config.guess on clean.

 -- Guillem Jover <guillem@debian.org>  Sat, 07 Jul 2007 05:07:01 +0300

bochs (2.3-2) unstable; urgency=low
