@@ -11,6 +11,7 @@ bochs (2.3.5-1) UNRELEASED; urgency=low
     its usage in README.Debian.
   * Turn failures when creating the tun device file non-fatal.
   * Add Homepage, Vcs-Browser and Vcs-Svn fields in debian/control.
+  * Call configure with autotools-dev recommended --build and --host options.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 04 Oct 2007 04:44:27 +0300
 
